--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-minimal
+
+title: Blue
+description: Quasi-Direct Drive for Low-Cost Compliant Robotic Manipulation
+logo: /assets/images/twoArmTeaser.jpg
