updates for new theme

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,11 @@ remote_theme: brentyi/osa
 
 title: Quasi-Direct Drive for Low-Cost Compliant Robotic Manipulation
 logo: /assets/images/twoArmTeaserFade.jpg
+
+collections:
+  sections:
+    output: false
+
+sass:
+  sass_dir: _sass
+  style: compressed
