--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ remote_theme: brentyi/osa
 
 title: Quasi-Direct Drive for Low-Cost Compliant Robotic Manipulation
 
+matomo_url: brentyi.com/piwik
+matomo_site_id: 3
+
 collections:
   sections:
     output: false
